--- a/home.html
+++ b/home.html
@@ -1,11 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payoo | Home</title>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+
+    <!-- daisyUI CDN and Theme -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5/themes.css" rel="stylesheet" type="text/css" />
+
+    <!-- Google font Outfit -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
+    <!-- font awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <style>
+        * {
+            font-family: "Outfit", sans-serif;
+        }
+    </style>
 </head>
-<body>
-    this is home page;
+
+<body class="min-h-screen max-w-md bg-base-200 mx-auto">
+    <div class="bg-white py-8 rounded-2xl ">
+        <header class="navbar border-b-2 border-gray-300">
+            <div class="nav-container w-11/12 flex justify-between items-center mx-auto">
+                <div class="flex items-center gap-3">
+                    <div class="w-15">
+                        <img src="./assets/logo.png" alt="">
+                    </div>
+                    <div>
+                        <p class="text-neutral font-bold text-xl">$<span id="current-balance">45000</span></p>
+                        <p class="text-sm text-neutral/50">Available Balance</p>
+                    </div>
+                </div>
+                <button class="btn btn-soft"><i class="rotate-180 fa-solid fa-arrow-right-from-bracket"></i>Log
+                    Out</button>
+            </div>
+        </header>
+
+
+        <section class="w-11/12 mx-auto mt-9 ">
+            <h2 class="text-3xl font-bold ">Welcome to Pay<span class="text-primary">oo</span></h2>
+            <p class="text-neutral/50 mt-4">Enjoy easy and convenient financial services with us. Cashout charge is low
+                and </p>
+        </section>
+
+        <section class="w-11/12 mx-auto mt-9">
+            <div class="grid grid-cols-3 grid-rows-2 gap-4">
+                <button class="btn btn-soft flex-col h-full hover:scale-95 btn-neutral">
+                    <img src="./assets/opt-1.png" alt="" class="mx-auto my-2">
+                    <p>Add Money</p>
+                </button>
+                <button class="btn btn-soft flex-col h-full hover:scale-95 btn-neutral">
+                    <img src="./assets/opt-2.png" alt="" class="mx-auto my-2">
+                    <p>Cashout</p>
+                </button>
+                <button class="btn btn-soft flex-col h-full hover:scale-95 btn-neutral">
+                    <img src="./assets/opt-3.png" alt="" class="mx-auto my-2">
+                    <p>Transfer Money</p>
+                </button>
+                <button class="btn btn-soft flex-col h-full hover:scale-95 btn-neutral">
+                    <img src="./assets/opt-4.png" alt="" class="mx-auto my-2">
+                    <p>Get Bonus</p>
+                </button>
+                <button class="btn btn-soft flex-col h-full hover:scale-95 btn-neutral">
+                    <img src="./assets/opt-5.png" alt="" class="mx-auto my-2">
+                    <p>Pay Bill</p>
+                </button>
+                <button class="btn btn-soft flex-col h-full hover:scale-95 btn-neutral">
+                    <img src="./assets/opt-6.png" alt="" class="mx-auto my-2">
+                    <p>Transactions</p>
+                </button>
+            </div>
+
+        </section>
+    </div>
+    <section class="w-11/12 mx-auto mt-9">
+        <h2 class="text-xl font-bold ">Cash Out</h2>
+        <section class="form pt-5">
+            <div class="card bg-base-100 w-full shadow rounded-[10%]">
+                <div class="card-body">
+                    <fieldset class="fieldset">
+                        <label class="label font-bold text-neutral">Agent Number</label>
+                        <input id="agent-number" maxlength="11" minlength="11" type="number"
+                            class="input rounded-full border-none bg-base-200 w-full"
+                            placeholder="Enter 11 digit phone number" />
+                        <label class="label font-bold text-neutral mt-1">Amount</label>
+                        <input id="amount" type="number"
+                            class="input rounded-full border-none bg-base-200 w-full" placeholder="Enter amount to withdraw" />
+                        <label class="label font-bold text-neutral mt-1">4 Digit Pin</label>
+                        <input id="cash-out-pin" maxlength="4" minlength="4" type="number"
+                            class="input rounded-full border-none bg-base-200 w-full" placeholder="Enter 4 Digit Pin" />
+                        <button id="withdraw-btn" class="btn btn-primary mt-4 rounded-full border-none">Withdraw Money</button>
+                    </fieldset>
+                </div>
+            </div>
+        </section>
+    </section>
+    <script src="./script/machine.js"></script>
+    <script src="./script/cashout.js"></script>
 </body>
+
 </html>
